resized signature boxes, fixed page breaks on print, show all incident field, removed click to sign on awake night form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,16 @@
   }
 }
 
+#sigCanvasDiv {
+  height: 100px;
+  display: flex;
+  padding-bottom: 20px;
+}
+
+.sigSection {
+  padding-left: 15px;
+}
+
 td{
   width: 20%;
 }
@@ -173,10 +183,11 @@ input {
   border-radius: 11px;
 }
 
-.sigCanvas {
-  width: 90%;
-  padding-bottom: 10px;
-}
+/* .sigCanvas {
+  width: 300px;
+  padding-bottom: 0px;
+  height: 50px;
+} */
 
 .extraInfoMainTitle {
   font-weight: 300;
@@ -579,6 +590,10 @@ html {
     font-family: "Google Sans Display", Arial, Helvetica, sans-serif;
     font-size: 2em;
   }
+
+  #summary_of_daily_schedule-row {
+    margin-top: -30px;
+  }
 }
 
 /* ipad */
@@ -738,6 +753,10 @@ html {
     height: 400px;
     width: 300px;
     position: relative;
+  }
+
+  #summary_of_daily_schedule-row {
+    margin-top: -30px;
   }
 }
 
